enhancement: add new functionalities in  UserServiceImpl, switch spring boot version to 2.3.0.RELEASE